поля для ввода дат при поиске

--- a/LogApp2/Views/mvcLoggingModel/Index.cshtml
+++ b/LogApp2/Views/mvcLoggingModel/Index.cshtml
@@ -22,11 +22,11 @@
         </div>
         <div class="form-group" style="margin-left:20px">
             <label class="control-label">Дата начала:</label>
-            <input id="DSsear"  class="form-control" />
+            <input id="DSsear" type="date"  class="form-control" />
         </div>
         <div class="form-group" style="margin-left:20px">
             <label class="control-label">Дата окончания:</label>
-            <input id="DEsear"  class="form-control" />
+            <input id="DEsear" type="date"  class="form-control" />
         </div>
         <div class="form-group" style="margin-left:20px">
             <label class="control-label">По тексту:</label>
